[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypernova-sdk"
version = "1.0.0"
description = "A utility library for common Python tasks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["utility", "utils", "hypernova-sdk"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["rich"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/risqiikhsani/novasdk"
Source = "https://github.com/risqiikhsani/novasdk"

[tool.hatch.build.targets.wheel]
packages = ["src/hypernova_sdk"]
